load(
    "@rules_haskell//haskell:cabal.bzl",
    "haskell_cabal_library",
)

haskell_cabal_library(
    name = "ghc-toolkit",
    srcs = glob(["**"]),
    version = "0.0.1",
    # cabalopts = ["--ghc-option=-Wall"],
    deps = ["@make_packages//ghc-asterius"],
    visibility = [
        # "//asterius:__pkg__",
        "//visibility:public",
    ],
    cabalopts = ["--ghc-option=-j4"],
)


filegroup(
    name = "ghc-toolkit-datafiles",
    srcs = [
        "boot-libs/asterius-prelude/asterius-prelude.cabal",
        "boot-libs/asterius-prelude/CHANGELOG.md",
        "boot-libs/asterius-prelude/LICENSE",
        "boot-libs/asterius-prelude/README.md",
        "boot-libs/asterius-prelude/src/Asterius/Aeson.hs",
        "boot-libs/asterius-prelude/src/Asterius/ByteString.hs",
        "boot-libs/asterius-prelude/src/Asterius/Text.hs",
        "boot-libs/asterius-prelude/src/Asterius/UTF8.hs",
        "boot-libs/base/aclocal.m4",
        "boot-libs/base/Asterius/Magic.hs",
        "boot-libs/base/Asterius/TopHandler.hs",
        "boot-libs/base/Asterius/Types.hs",
        "boot-libs/base/Asterius/Types/JSArray.hs",
        "boot-libs/base/Asterius/Types/JSException.hs",
        "boot-libs/base/Asterius/Types/JSFunction.hs",
        "boot-libs/base/Asterius/Types/JSObject.hs",
        "boot-libs/base/Asterius/Types/JSString.hs",
        "boot-libs/base/Asterius/Types/JSUint8Array.hs",
        "boot-libs/base/Asterius/Types/JSVal.hs",
        "boot-libs/base/autom4te.cache/output.0",
        "boot-libs/base/autom4te.cache/output.1",
        "boot-libs/base/autom4te.cache/requests",
        "boot-libs/base/autom4te.cache/traces.0",
        "boot-libs/base/autom4te.cache/traces.1",
        "boot-libs/base/base.buildinfo.in",
        "boot-libs/base/base.cabal",
        "boot-libs/base/cbits/CastFloatWord.cmm",
        "boot-libs/base/cbits/consUtils.c",
        "boot-libs/base/cbits/DarwinUtils.c",
        "boot-libs/base/cbits/fs.c",
        "boot-libs/base/cbits/iconv.c",
        "boot-libs/base/cbits/inputReady.c",
        "boot-libs/base/cbits/JSVal.cmm",
        "boot-libs/base/cbits/md5.c",
        "boot-libs/base/cbits/PrelIOUtils.c",
        "boot-libs/base/cbits/primFloat.c",
        "boot-libs/base/cbits/README.Unicode",
        "boot-libs/base/cbits/SetEnv.c",
        "boot-libs/base/cbits/sysconf.c",
        "boot-libs/base/cbits/ubconfc",
        "boot-libs/base/cbits/WCsubst.c",
        "boot-libs/base/cbits/Win32Utils.c",
        "boot-libs/base/changelog.md",
        "boot-libs/base/codepages/Makefile",
        "boot-libs/base/codepages/MakeTable.hs",
        "boot-libs/base/config.guess",
        "boot-libs/base/config.sub",
        "boot-libs/base/configure",
        "boot-libs/base/configure.ac",
        "boot-libs/base/Control/Applicative.hs",
        "boot-libs/base/Control/Arrow.hs",
        "boot-libs/base/Control/Category.hs",
        "boot-libs/base/Control/Concurrent.hs",
        "boot-libs/base/Control/Concurrent/Chan.hs",
        "boot-libs/base/Control/Concurrent/MVar.hs",
        "boot-libs/base/Control/Concurrent/QSem.hs",
        "boot-libs/base/Control/Concurrent/QSemN.hs",
        "boot-libs/base/Control/Exception.hs",
        "boot-libs/base/Control/Exception/Base.hs",
        "boot-libs/base/Control/Monad.hs",
        "boot-libs/base/Control/Monad/Fail.hs",
        "boot-libs/base/Control/Monad/Fix.hs",
        "boot-libs/base/Control/Monad/Instances.hs",
        "boot-libs/base/Control/Monad/IO/Class.hs",
        "boot-libs/base/Control/Monad/ST.hs",
        "boot-libs/base/Control/Monad/ST/Imp.hs",
        "boot-libs/base/Control/Monad/ST/Lazy.hs",
        "boot-libs/base/Control/Monad/ST/Lazy/Imp.hs",
        "boot-libs/base/Control/Monad/ST/Lazy/Safe.hs",
        "boot-libs/base/Control/Monad/ST/Lazy/Unsafe.hs",
        "boot-libs/base/Control/Monad/ST/Safe.hs",
        "boot-libs/base/Control/Monad/ST/Strict.hs",
        "boot-libs/base/Control/Monad/ST/Unsafe.hs",
        "boot-libs/base/Control/Monad/Zip.hs",
        "boot-libs/base/Data/Bifoldable.hs",
        "boot-libs/base/Data/Bifunctor.hs",
        "boot-libs/base/Data/Bitraversable.hs",
        "boot-libs/base/Data/Bits.hs",
        "boot-libs/base/Data/Bool.hs",
        "boot-libs/base/Data/Char.hs",
        "boot-libs/base/Data/Coerce.hs",
        "boot-libs/base/Data/Complex.hs",
        "boot-libs/base/Data/Data.hs",
        "boot-libs/base/Data/Dynamic.hs",
        "boot-libs/base/Data/Either.hs",
        "boot-libs/base/Data/Eq.hs",
        "boot-libs/base/Data/Fixed.hs",
        "boot-libs/base/Data/Foldable.hs",
        "boot-libs/base/Data/Function.hs",
        "boot-libs/base/Data/Functor.hs",
        "boot-libs/base/Data/Functor/Classes.hs",
        "boot-libs/base/Data/Functor/Compose.hs",
        "boot-libs/base/Data/Functor/Const.hs",
        "boot-libs/base/Data/Functor/Contravariant.hs",
        "boot-libs/base/Data/Functor/Identity.hs",
        "boot-libs/base/Data/Functor/Product.hs",
        "boot-libs/base/Data/Functor/Sum.hs",
        "boot-libs/base/Data/Functor/Utils.hs",
        "boot-libs/base/Data/Int.hs",
        "boot-libs/base/Data/IORef.hs",
        "boot-libs/base/Data/Ix.hs",
        "boot-libs/base/Data/Kind.hs",
        "boot-libs/base/Data/List.hs",
        "boot-libs/base/Data/List/NonEmpty.hs",
        "boot-libs/base/Data/Maybe.hs",
        "boot-libs/base/Data/Monoid.hs",
        "boot-libs/base/Data/OldList.hs",
        "boot-libs/base/Data/Ord.hs",
        "boot-libs/base/Data/Proxy.hs",
        "boot-libs/base/Data/Ratio.hs",
        "boot-libs/base/Data/Semigroup.hs",
        "boot-libs/base/Data/Semigroup/Internal.hs",
        "boot-libs/base/Data/Semigroup/Internal.hs-boot",
        "boot-libs/base/Data/STRef.hs",
        "boot-libs/base/Data/STRef/Lazy.hs",
        "boot-libs/base/Data/STRef/Strict.hs",
        "boot-libs/base/Data/String.hs",
        "boot-libs/base/Data/Traversable.hs",
        "boot-libs/base/Data/Tuple.hs",
        "boot-libs/base/Data/Type/Bool.hs",
        "boot-libs/base/Data/Type/Coercion.hs",
        "boot-libs/base/Data/Type/Equality.hs",
        "boot-libs/base/Data/Typeable.hs",
        "boot-libs/base/Data/Typeable/Internal.hs",
        "boot-libs/base/Data/Unique.hs",
        "boot-libs/base/Data/Version.hs",
        "boot-libs/base/Data/Void.hs",
        "boot-libs/base/Data/Word.hs",
        "boot-libs/base/Debug/Trace.hs",
        "boot-libs/base/Debug/Trace.hs-boot",
        "boot-libs/base/Foreign.hs",
        "boot-libs/base/Foreign/C.hs",
        "boot-libs/base/Foreign/C/Error.hs",
        "boot-libs/base/Foreign/C/String.hs",
        "boot-libs/base/Foreign/C/Types.hs",
        "boot-libs/base/Foreign/Concurrent.hs",
        "boot-libs/base/Foreign/ForeignPtr.hs",
        "boot-libs/base/Foreign/ForeignPtr/Imp.hs",
        "boot-libs/base/Foreign/ForeignPtr/Safe.hs",
        "boot-libs/base/Foreign/ForeignPtr/Unsafe.hs",
        "boot-libs/base/Foreign/Marshal.hs",
        "boot-libs/base/Foreign/Marshal/Alloc.hs",
        "boot-libs/base/Foreign/Marshal/Array.hs",
        "boot-libs/base/Foreign/Marshal/Error.hs",
        "boot-libs/base/Foreign/Marshal/Pool.hs",
        "boot-libs/base/Foreign/Marshal/Safe.hs",
        "boot-libs/base/Foreign/Marshal/Unsafe.hs",
        "boot-libs/base/Foreign/Marshal/Utils.hs",
        "boot-libs/base/Foreign/Ptr.hs",
        "boot-libs/base/Foreign/Safe.hs",
        "boot-libs/base/Foreign/StablePtr.hs",
        "boot-libs/base/Foreign/Storable.hs",
        "boot-libs/base/GHC/Arr.hs",
        "boot-libs/base/GHC/Base.hs",
        "boot-libs/base/GHC/Base.hs-boot",
        "boot-libs/base/GHC/ByteOrder.hs",
        "boot-libs/base/GHC/Char.hs",
        "boot-libs/base/GHC/Clock.hsc",
        "boot-libs/base/GHC/Conc.hs",
        "boot-libs/base/GHC/Conc/IO.hs",
        "boot-libs/base/GHC/Conc/Signal.hs",
        "boot-libs/base/GHC/Conc/Sync.hs",
        "boot-libs/base/GHC/Conc/Windows.hs",
        "boot-libs/base/GHC/ConsoleHandler.hs",
        "boot-libs/base/GHC/Constants.hs",
        "boot-libs/base/GHC/Desugar.hs",
        "boot-libs/base/GHC/Enum.hs",
        "boot-libs/base/GHC/Environment.hs",
        "boot-libs/base/GHC/Err.hs",
        "boot-libs/base/GHC/Event.hs",
        "boot-libs/base/GHC/Event/Arr.hs",
        "boot-libs/base/GHC/Event/Array.hs",
        "boot-libs/base/GHC/Event/Control.hs",
        "boot-libs/base/GHC/Event/EPoll.hsc",
        "boot-libs/base/GHC/Event/Internal.hs",
        "boot-libs/base/GHC/Event/IntTable.hs",
        "boot-libs/base/GHC/Event/KQueue.hsc",
        "boot-libs/base/GHC/Event/Manager.hs",
        "boot-libs/base/GHC/Event/Poll.hsc",
        "boot-libs/base/GHC/Event/PSQ.hs",
        "boot-libs/base/GHC/Event/Thread.hs",
        "boot-libs/base/GHC/Event/TimerManager.hs",
        "boot-libs/base/GHC/Event/Unique.hs",
        "boot-libs/base/GHC/Exception.hs",
        "boot-libs/base/GHC/Exception.hs-boot",
        "boot-libs/base/GHC/Exception/Type.hs",
        "boot-libs/base/GHC/Exception/Type.hs-boot",
        "boot-libs/base/GHC/ExecutionStack.hs",
        "boot-libs/base/GHC/ExecutionStack/Internal.hsc",
        "boot-libs/base/GHC/Exts.hs",
        "boot-libs/base/GHC/Fingerprint.hs",
        "boot-libs/base/GHC/Fingerprint.hs-boot",
        "boot-libs/base/GHC/Fingerprint/Type.hs",
        "boot-libs/base/GHC/Float.hs",
        "boot-libs/base/GHC/Float/ConversionUtils.hs",
        "boot-libs/base/GHC/Float/RealFracMethods.hs",
        "boot-libs/base/GHC/Foreign.hs",
        "boot-libs/base/GHC/ForeignPtr.hs",
        "boot-libs/base/GHC/Generics.hs",
        "boot-libs/base/GHC/GHCi.hs",
        "boot-libs/base/GHC/GHCi/Helpers.hs",
        "boot-libs/base/GHC/Int.hs",
        "boot-libs/base/GHC/IO.hs",
        "boot-libs/base/GHC/IO.hs-boot",
        "boot-libs/base/GHC/IO/Buffer.hs",
        "boot-libs/base/GHC/IO/BufferedIO.hs",
        "boot-libs/base/GHC/IO/Device.hs",
        "boot-libs/base/GHC/IO/Encoding.hs",
        "boot-libs/base/GHC/IO/Encoding.hs-boot",
        "boot-libs/base/GHC/IO/Encoding/CodePage.hs",
        "boot-libs/base/GHC/IO/Encoding/CodePage/API.hs",
        "boot-libs/base/GHC/IO/Encoding/CodePage/Table.hs",
        "boot-libs/base/GHC/IO/Encoding/Failure.hs",
        "boot-libs/base/GHC/IO/Encoding/Iconv.hs",
        "boot-libs/base/GHC/IO/Encoding/Latin1.hs",
        "boot-libs/base/GHC/IO/Encoding/Types.hs",
        "boot-libs/base/GHC/IO/Encoding/UTF16.hs",
        "boot-libs/base/GHC/IO/Encoding/UTF32.hs",
        "boot-libs/base/GHC/IO/Encoding/UTF8.hs",
        "boot-libs/base/GHC/IO/Exception.hs",
        "boot-libs/base/GHC/IO/Exception.hs-boot",
        "boot-libs/base/GHC/IO/FD.hs",
        "boot-libs/base/GHC/IO/Handle.hs",
        "boot-libs/base/GHC/IO/Handle.hs-boot",
        "boot-libs/base/GHC/IO/Handle/FD.hs",
        "boot-libs/base/GHC/IO/Handle/FD.hs-boot",
        "boot-libs/base/GHC/IO/Handle/Internals.hs",
        "boot-libs/base/GHC/IO/Handle/Lock.hsc",
        "boot-libs/base/GHC/IO/Handle/Text.hs",
        "boot-libs/base/GHC/IO/Handle/Types.hs",
        "boot-libs/base/GHC/IO/IOMode.hs",
        "boot-libs/base/GHC/IO/Unsafe.hs",
        "boot-libs/base/GHC/IOArray.hs",
        "boot-libs/base/GHC/IORef.hs",
        "boot-libs/base/GHC/List.hs",
        "boot-libs/base/GHC/Maybe.hs",
        "boot-libs/base/GHC/MVar.hs",
        "boot-libs/base/GHC/Natural.hs",
        "boot-libs/base/GHC/Num.hs",
        "boot-libs/base/GHC/OldList.hs",
        "boot-libs/base/GHC/OverloadedLabels.hs",
        "boot-libs/base/GHC/Pack.hs",
        "boot-libs/base/GHC/Profiling.hs",
        "boot-libs/base/GHC/Ptr.hs",
        "boot-libs/base/GHC/Read.hs",
        "boot-libs/base/GHC/Real.hs",
        "boot-libs/base/GHC/Real.hs-boot",
        "boot-libs/base/GHC/Records.hs",
        "boot-libs/base/GHC/ResponseFile.hs",
        "boot-libs/base/GHC/RTS/Flags.hsc",
        "boot-libs/base/GHC/Show.hs",
        "boot-libs/base/GHC/ST.hs",
        "boot-libs/base/GHC/Stable.hs",
        "boot-libs/base/GHC/StableName.hs",
        "boot-libs/base/GHC/Stack.hs",
        "boot-libs/base/GHC/Stack/CCS.hs-boot",
        "boot-libs/base/GHC/Stack/CCS.hsc",
        "boot-libs/base/GHC/Stack/Types.hs",
        "boot-libs/base/GHC/StaticPtr.hs",
        "boot-libs/base/GHC/StaticPtr/Internal.hs",
        "boot-libs/base/GHC/Stats.hsc",
        "boot-libs/base/GHC/Storable.hs",
        "boot-libs/base/GHC/STRef.hs",
        "boot-libs/base/GHC/TopHandler.hs",
        "boot-libs/base/GHC/TypeLits.hs",
        "boot-libs/base/GHC/TypeNats.hs",
        "boot-libs/base/GHC/Unicode.hs",
        "boot-libs/base/GHC/Weak.hs",
        "boot-libs/base/GHC/Windows.hs",
        "boot-libs/base/GHC/Word.hs",
        "boot-libs/base/include/consUtils.h",
        "boot-libs/base/include/CTypes.h",
        "boot-libs/base/include/EventConfig.h.in",
        "boot-libs/base/include/fs.h",
        "boot-libs/base/include/HsBase.h",
        "boot-libs/base/include/HsBaseConfig.h.in",
        "boot-libs/base/include/HsEvent.h",
        "boot-libs/base/include/ieee-flpt.h",
        "boot-libs/base/include/md5.h",
        "boot-libs/base/include/WCsubst.h",
        "boot-libs/base/install-sh",
        "boot-libs/base/LICENSE",
        "boot-libs/base/Numeric.hs",
        "boot-libs/base/Numeric/Natural.hs",
        "boot-libs/base/Prelude.hs",
        "boot-libs/base/prologue.txt",
        "boot-libs/base/Setup.hs",
        "boot-libs/base/System/Console/GetOpt.hs",
        "boot-libs/base/System/CPUTime.hsc",
        "boot-libs/base/System/CPUTime/Posix/ClockGetTime.hsc",
        "boot-libs/base/System/CPUTime/Posix/RUsage.hsc",
        "boot-libs/base/System/CPUTime/Posix/Times.hsc",
        "boot-libs/base/System/CPUTime/Unsupported.hs",
        "boot-libs/base/System/CPUTime/Utils.hs",
        "boot-libs/base/System/CPUTime/Windows.hsc",
        "boot-libs/base/System/Environment.hs",
        "boot-libs/base/System/Environment/Blank.hsc",
        "boot-libs/base/System/Environment/ExecutablePath.hsc",
        "boot-libs/base/System/Exit.hs",
        "boot-libs/base/System/Info.hs",
        "boot-libs/base/System/IO.hs",
        "boot-libs/base/System/IO/Error.hs",
        "boot-libs/base/System/IO/Unsafe.hs",
        "boot-libs/base/System/Mem.hs",
        "boot-libs/base/System/Mem/StableName.hs",
        "boot-libs/base/System/Mem/Weak.hs",
        "boot-libs/base/System/Posix/Internals.hs",
        "boot-libs/base/System/Posix/Types.hs",
        "boot-libs/base/System/Timeout.hs",
        "boot-libs/base/tests/addr001.hs",
        "boot-libs/base/tests/addr001.stdout",
        "boot-libs/base/tests/addr001.stdout-alpha-dec-osf3",
        "boot-libs/base/tests/addr001.stdout-mips-sgi-irix",
        "boot-libs/base/tests/addr001.stdout-ws-64",
        "boot-libs/base/tests/addr001.stdout-x86_64-unknown-openbsd",
        "boot-libs/base/tests/all.T",
        "boot-libs/base/tests/assert.hs",
        "boot-libs/base/tests/assert.stderr",
        "boot-libs/base/tests/CatEntail.hs",
        "boot-libs/base/tests/CatPairs.hs",
        "boot-libs/base/tests/char001.hs",
        "boot-libs/base/tests/char001.stdout",
        "boot-libs/base/tests/char002.hs",
        "boot-libs/base/tests/char002.stdout",
        "boot-libs/base/tests/Concurrent/4876.stdout",
        "boot-libs/base/tests/Concurrent/all.T",
        "boot-libs/base/tests/Concurrent/Chan001.hs",
        "boot-libs/base/tests/Concurrent/Chan001.stdout",
        "boot-libs/base/tests/Concurrent/Chan002.hs",
        "boot-libs/base/tests/Concurrent/Chan002.stdout",
        "boot-libs/base/tests/Concurrent/Chan003.hs",
        "boot-libs/base/tests/Concurrent/Chan003.stdout",
        "boot-libs/base/tests/Concurrent/Makefile",
        "boot-libs/base/tests/Concurrent/MVar001.hs",
        "boot-libs/base/tests/Concurrent/MVar001.stdout",
        "boot-libs/base/tests/Concurrent/ThreadDelay001.hs",
        "boot-libs/base/tests/CPUTime001.hs",
        "boot-libs/base/tests/CPUTime001.stdout",
        "boot-libs/base/tests/cstring001.hs",
        "boot-libs/base/tests/data-fixed-show-read.hs",
        "boot-libs/base/tests/data-fixed-show-read.stdout",
        "boot-libs/base/tests/dynamic001.hs",
        "boot-libs/base/tests/dynamic001.stdout",
        "boot-libs/base/tests/dynamic002.hs",
        "boot-libs/base/tests/dynamic002.stdout",
        "boot-libs/base/tests/dynamic003.hs",
        "boot-libs/base/tests/dynamic003.stdout",
        "boot-libs/base/tests/dynamic004.hs",
        "boot-libs/base/tests/dynamic004.stdout",
        "boot-libs/base/tests/dynamic005.hs",
        "boot-libs/base/tests/dynamic005.stdout",
        "boot-libs/base/tests/echo001.hs",
        "boot-libs/base/tests/echo001.stdout",
        "boot-libs/base/tests/enum01.hs",
        "boot-libs/base/tests/enum01.stdout",
        "boot-libs/base/tests/enum01.stdout-alpha-dec-osf3",
        "boot-libs/base/tests/enum01.stdout-ws-64",
        "boot-libs/base/tests/enum02.hs",
        "boot-libs/base/tests/enum02.stdout",
        "boot-libs/base/tests/enum02.stdout-alpha-dec-osf3",
        "boot-libs/base/tests/enum02.stdout-mips-sgi-irix",
        "boot-libs/base/tests/enum02.stdout-ws-64",
        "boot-libs/base/tests/enum02.stdout-x86_64-unknown-openbsd",
        "boot-libs/base/tests/enum03.hs",
        "boot-libs/base/tests/enum03.stdout",
        "boot-libs/base/tests/enum03.stdout-alpha-dec-osf3",
        "boot-libs/base/tests/enum03.stdout-mips-sgi-irix",
        "boot-libs/base/tests/enum03.stdout-ws-64",
        "boot-libs/base/tests/enum03.stdout-x86_64-unknown-openbsd",
        "boot-libs/base/tests/enum04.hs",
        "boot-libs/base/tests/enum04.stdout",
        "boot-libs/base/tests/enum_processor.bat",
        "boot-libs/base/tests/enum_processor.py",
        "boot-libs/base/tests/enumDouble.hs",
        "boot-libs/base/tests/enumDouble.stdout",
        "boot-libs/base/tests/enumNumeric.hs",
        "boot-libs/base/tests/enumNumeric.stdout",
        "boot-libs/base/tests/enumRatio.hs",
        "boot-libs/base/tests/enumRatio.stdout",
        "boot-libs/base/tests/exceptionsrun001.hs",
        "boot-libs/base/tests/exceptionsrun001.stdout",
        "boot-libs/base/tests/exceptionsrun002.hs",
        "boot-libs/base/tests/exceptionsrun002.stdout",
        "boot-libs/base/tests/fixed.hs",
        "boot-libs/base/tests/fixed.stdout",
        "boot-libs/base/tests/fixUsingLazyST.stdout",
        "boot-libs/base/tests/foldableArray.hs",
        "boot-libs/base/tests/foldableArray.stdout",
        "boot-libs/base/tests/fromJust.hs",
        "boot-libs/base/tests/fromJust.stderr",
        "boot-libs/base/tests/functorOperators.hs",
        "boot-libs/base/tests/functorOperators.stdout",
        "boot-libs/base/tests/genericNegative001.hs",
        "boot-libs/base/tests/genericNegative001.stdout",
        "boot-libs/base/tests/hGetBuf002.hs",
        "boot-libs/base/tests/hGetBuf002.stdout",
        "boot-libs/base/tests/hGetBuf003.hs",
        "boot-libs/base/tests/hGetBuf003.stdout",
        "boot-libs/base/tests/hPutBuf001.hs",
        "boot-libs/base/tests/hPutBuf001.stdout",
        "boot-libs/base/tests/hPutBuf002.hs",
        "boot-libs/base/tests/hPutBuf002.stdout",
        "boot-libs/base/tests/hTell001.hs",
        "boot-libs/base/tests/hTell001.stdout",
        "boot-libs/base/tests/hTell002.hs",
        "boot-libs/base/tests/hTell002.stdout",
        "boot-libs/base/tests/hWaitForInput-accurate-socket.hs",
        "boot-libs/base/tests/hWaitForInput-accurate-socket.stdout",
        "boot-libs/base/tests/inits.hs",
        "boot-libs/base/tests/IO/all.T",
        "boot-libs/base/tests/IO/concio001.hs",
        "boot-libs/base/tests/IO/concio001.stdout",
        "boot-libs/base/tests/IO/concio001.thr.stdout",
        "boot-libs/base/tests/IO/concio002.hs",
        "boot-libs/base/tests/IO/concio002.stdout",
        "boot-libs/base/tests/IO/countReaders001.hs",
        "boot-libs/base/tests/IO/countReaders001.stdout",
        "boot-libs/base/tests/IO/decodingerror001.hs",
        "boot-libs/base/tests/IO/decodingerror001.in1",
        "boot-libs/base/tests/IO/decodingerror001.in2",
        "boot-libs/base/tests/IO/decodingerror001.stdout",
        "boot-libs/base/tests/IO/decodingerror002.hs",
        "boot-libs/base/tests/IO/decodingerror002.in",
        "boot-libs/base/tests/IO/decodingerror002.stdout",
        "boot-libs/base/tests/IO/encoded-data/CP1251-UTF8.txt",
        "boot-libs/base/tests/IO/encoded-data/CP1251.txt",
        "boot-libs/base/tests/IO/encoded-data/CP936-UTF8.txt",
        "boot-libs/base/tests/IO/encoded-data/CP936.txt",
        "boot-libs/base/tests/IO/encoding001.hs",
        "boot-libs/base/tests/IO/encoding002.hs",
        "boot-libs/base/tests/IO/encoding002.stdout",
        "boot-libs/base/tests/IO/encoding003.hs",
        "boot-libs/base/tests/IO/encoding003.stdout",
        "boot-libs/base/tests/IO/encoding004.hs",
        "boot-libs/base/tests/IO/encoding004.stdout",
        "boot-libs/base/tests/IO/encoding005.hs",
        "boot-libs/base/tests/IO/encoding005.stdout",
        "boot-libs/base/tests/IO/encodingerror001.hs",
        "boot-libs/base/tests/IO/encodingerror001.stdout",
        "boot-libs/base/tests/IO/environment001.hs",
        "boot-libs/base/tests/IO/environment001.stdout",
        "boot-libs/base/tests/IO/finalization001.hs",
        "boot-libs/base/tests/IO/finalization001.stdout",
        "boot-libs/base/tests/IO/hClose001.hs",
        "boot-libs/base/tests/IO/hClose001.stdout",
        "boot-libs/base/tests/IO/hClose002.hs",
        "boot-libs/base/tests/IO/hClose002.stdout",
        "boot-libs/base/tests/IO/hClose002.stdout-i386-unknown-solaris2",
        "boot-libs/base/tests/IO/hClose002.stdout-x86_64-unknown-solaris2",
        "boot-libs/base/tests/IO/hClose003.hs",
        "boot-libs/base/tests/IO/hClose003.stdout",
        "boot-libs/base/tests/IO/hDuplicateTo001.hs",
        "boot-libs/base/tests/IO/hDuplicateTo001.stderr",
        "boot-libs/base/tests/IO/hFileSize001.hs",
        "boot-libs/base/tests/IO/hFileSize001.stdout",
        "boot-libs/base/tests/IO/hFileSize002.hs",
        "boot-libs/base/tests/IO/hFileSize002.stdout",
        "boot-libs/base/tests/IO/hFlush001.hs",
        "boot-libs/base/tests/IO/hFlush001.stdout",
        "boot-libs/base/tests/IO/hGetBuf001.hs",
        "boot-libs/base/tests/IO/hGetBuf001.stdout",
        "boot-libs/base/tests/IO/hGetBuffering001.hs",
        "boot-libs/base/tests/IO/hGetBuffering001.stdout",
        "boot-libs/base/tests/IO/hGetChar001.hs",
        "boot-libs/base/tests/IO/hGetChar001.stdin",
        "boot-libs/base/tests/IO/hGetChar001.stdout",
        "boot-libs/base/tests/IO/hGetLine001.hs",
        "boot-libs/base/tests/IO/hGetLine001.stdout",
        "boot-libs/base/tests/IO/hGetLine002.hs",
        "boot-libs/base/tests/IO/hGetLine002.stdin",
        "boot-libs/base/tests/IO/hGetLine002.stdout",
        "boot-libs/base/tests/IO/hGetLine003.hs",
        "boot-libs/base/tests/IO/hGetLine003.stdin",
        "boot-libs/base/tests/IO/hGetLine003.stdout",
        "boot-libs/base/tests/IO/hGetPosn001.hs",
        "boot-libs/base/tests/IO/hGetPosn001.in",
        "boot-libs/base/tests/IO/hGetPosn001.stdout",
        "boot-libs/base/tests/IO/hIsEOF001.hs",
        "boot-libs/base/tests/IO/hIsEOF001.stdout",
        "boot-libs/base/tests/IO/hIsEOF002.hs",
        "boot-libs/base/tests/IO/hIsEOF002.stdout",
        "boot-libs/base/tests/IO/hReady001.hs",
        "boot-libs/base/tests/IO/hReady001.stdout",
        "boot-libs/base/tests/IO/hReady002.hs",
        "boot-libs/base/tests/IO/hReady002.stdout",
        "boot-libs/base/tests/IO/hSeek001.hs",
        "boot-libs/base/tests/IO/hSeek001.in",
        "boot-libs/base/tests/IO/hSeek001.stdout",
        "boot-libs/base/tests/IO/hSeek002.hs",
        "boot-libs/base/tests/IO/hSeek002.stdout",
        "boot-libs/base/tests/IO/hSeek003.hs",
        "boot-libs/base/tests/IO/hSeek003.stdout",
        "boot-libs/base/tests/IO/hSeek004.hs",
        "boot-libs/base/tests/IO/hSeek004.stdout",
        "boot-libs/base/tests/IO/hSetBuffering002.hs",
        "boot-libs/base/tests/IO/hSetBuffering002.stdout",
        "boot-libs/base/tests/IO/hSetBuffering003.hs",
        "boot-libs/base/tests/IO/hSetBuffering003.stderr",
        "boot-libs/base/tests/IO/hSetBuffering003.stdout",
        "boot-libs/base/tests/IO/hSetBuffering004.hs",
        "boot-libs/base/tests/IO/hSetBuffering004.stdout",
        "boot-libs/base/tests/IO/hSetEncoding001.hs",
        "boot-libs/base/tests/IO/hSetEncoding001.in",
        "boot-libs/base/tests/IO/hSetEncoding001.stdout",
        "boot-libs/base/tests/IO/hSetEncoding002.hs",
        "boot-libs/base/tests/IO/hSetEncoding002.stdout",
        "boot-libs/base/tests/IO/ioeGetErrorString001.hs",
        "boot-libs/base/tests/IO/ioeGetErrorString001.stdout",
        "boot-libs/base/tests/IO/ioeGetFileName001.hs",
        "boot-libs/base/tests/IO/ioeGetFileName001.stdout",
        "boot-libs/base/tests/IO/ioeGetHandle001.hs",
        "boot-libs/base/tests/IO/ioeGetHandle001.stdout",
        "boot-libs/base/tests/IO/IOError001.hs",
        "boot-libs/base/tests/IO/IOError001.stdout",
        "boot-libs/base/tests/IO/IOError002.hs",
        "boot-libs/base/tests/IO/IOError002.stdout",
        "boot-libs/base/tests/IO/isEOF001.hs",
        "boot-libs/base/tests/IO/isEOF001.stdout",
        "boot-libs/base/tests/IO/latin1",
        "boot-libs/base/tests/IO/Makefile",
        "boot-libs/base/tests/IO/misc001.hs",
        "boot-libs/base/tests/IO/newline001.hs",
        "boot-libs/base/tests/IO/openFile001.hs",
        "boot-libs/base/tests/IO/openFile001.stdout",
        "boot-libs/base/tests/IO/openFile002.hs",
        "boot-libs/base/tests/IO/openFile002.stderr",
        "boot-libs/base/tests/IO/openFile003.hs",
        "boot-libs/base/tests/IO/openFile003.stdout",
        "boot-libs/base/tests/IO/openFile003.stdout-mingw32",
        "boot-libs/base/tests/IO/openFile003.stdout-mips-sgi-irix",
        "boot-libs/base/tests/IO/openFile003.stdout-sparc-sun-solaris2",
        "boot-libs/base/tests/IO/openFile004.hs",
        "boot-libs/base/tests/IO/openFile004.stdout",
        "boot-libs/base/tests/IO/openFile005.hs",
        "boot-libs/base/tests/IO/openFile005.stdout",
        "boot-libs/base/tests/IO/openFile006.hs",
        "boot-libs/base/tests/IO/openFile006.stdout",
        "boot-libs/base/tests/IO/openFile007.hs",
        "boot-libs/base/tests/IO/openFile007.stdout",
        "boot-libs/base/tests/IO/openFile008.hs",
        "boot-libs/base/tests/IO/openTempFile001.hs",
        "boot-libs/base/tests/IO/putStr001.hs",
        "boot-libs/base/tests/IO/putStr001.stdout",
        "boot-libs/base/tests/IO/readFile001.hs",
        "boot-libs/base/tests/IO/readFile001.stdout",
        "boot-libs/base/tests/IO/readwrite001.hs",
        "boot-libs/base/tests/IO/readwrite001.stdout",
        "boot-libs/base/tests/IO/readwrite002.hs",
        "boot-libs/base/tests/IO/readwrite002.stdout",
        "boot-libs/base/tests/IO/readwrite003.hs",
        "boot-libs/base/tests/IO/readwrite003.stdout",
        "boot-libs/base/tests/IO/T12010/cbits/initWinSock.c",
        "boot-libs/base/tests/IO/T12010/Makefile",
        "boot-libs/base/tests/IO/T12010/T12010.hsc",
        "boot-libs/base/tests/IO/T12010/test.T",
        "boot-libs/base/tests/IO/T17414.hs",
        "boot-libs/base/tests/IO/T2122.hs",
        "boot-libs/base/tests/IO/T3307.hs",
        "boot-libs/base/tests/IO/T3307.stdout",
        "boot-libs/base/tests/IO/T4144.hs",
        "boot-libs/base/tests/IO/T4144.stdout",
        "boot-libs/base/tests/IO/T4808.hs",
        "boot-libs/base/tests/IO/T4808.stderr",
        "boot-libs/base/tests/IO/T4808.stdout",
        "boot-libs/base/tests/IO/T4855.hs",
        "boot-libs/base/tests/IO/T4855.stderr",
        "boot-libs/base/tests/IO/T4895.hs",
        "boot-libs/base/tests/IO/T4895.stdout",
        "boot-libs/base/tests/IO/T7853.hs",
        "boot-libs/base/tests/IO/T7853.stdout",
        "boot-libs/base/tests/IO/utf8-test",
        "boot-libs/base/tests/ioref001.hs",
        "boot-libs/base/tests/ioref001.stdout",
        "boot-libs/base/tests/isSuffixOf.hs",
        "boot-libs/base/tests/isSuffixOf.stdout",
        "boot-libs/base/tests/ix001.hs",
        "boot-libs/base/tests/ix001.stdout",
        "boot-libs/base/tests/lazySTexamples.hs",
        "boot-libs/base/tests/lazySTexamples.stderr",
        "boot-libs/base/tests/lazySTexamples.stdout",
        "boot-libs/base/tests/length001.hs",
        "boot-libs/base/tests/length001.stdout",
        "boot-libs/base/tests/lex001.hs",
        "boot-libs/base/tests/lex001.stdout",
        "boot-libs/base/tests/list001.hs",
        "boot-libs/base/tests/list001.stdout",
        "boot-libs/base/tests/list002.hs",
        "boot-libs/base/tests/list002.stdout",
        "boot-libs/base/tests/list003.hs",
        "boot-libs/base/tests/list003.stdout",
        "boot-libs/base/tests/Makefile",
        "boot-libs/base/tests/memo001.hs",
        "boot-libs/base/tests/memo001.stdout",
        "boot-libs/base/tests/memo002.hs",
        "boot-libs/base/tests/memo002.stdout",
        "boot-libs/base/tests/Memo1.lhs",
        "boot-libs/base/tests/Memo2.lhs",
        "boot-libs/base/tests/Numeric/all.T",
        "boot-libs/base/tests/Numeric/Makefile",
        "boot-libs/base/tests/Numeric/num001.hs",
        "boot-libs/base/tests/Numeric/num001.stdout",
        "boot-libs/base/tests/Numeric/num002.hs",
        "boot-libs/base/tests/Numeric/num002.stdout",
        "boot-libs/base/tests/Numeric/num002.stdout-alpha-dec-osf3",
        "boot-libs/base/tests/Numeric/num002.stdout-mips-sgi-irix",
        "boot-libs/base/tests/Numeric/num002.stdout-ws-64",
        "boot-libs/base/tests/Numeric/num002.stdout-x86_64-unknown-openbsd",
        "boot-libs/base/tests/Numeric/num003.hs",
        "boot-libs/base/tests/Numeric/num003.stdout",
        "boot-libs/base/tests/Numeric/num003.stdout-alpha-dec-osf3",
        "boot-libs/base/tests/Numeric/num003.stdout-mips-sgi-irix",
        "boot-libs/base/tests/Numeric/num003.stdout-ws-64",
        "boot-libs/base/tests/Numeric/num003.stdout-x86_64-unknown-openbsd",
        "boot-libs/base/tests/Numeric/num004.hs",
        "boot-libs/base/tests/Numeric/num004.stdout",
        "boot-libs/base/tests/Numeric/num004.stdout-alpha-dec-osf3",
        "boot-libs/base/tests/Numeric/num004.stdout-mips-sgi-irix",
        "boot-libs/base/tests/Numeric/num004.stdout-ws-64",
        "boot-libs/base/tests/Numeric/num004.stdout-x86_64-unknown-openbsd",
        "boot-libs/base/tests/Numeric/num005.hs",
        "boot-libs/base/tests/Numeric/num005.stdout",
        "boot-libs/base/tests/Numeric/num005.stdout-alpha-dec-osf3",
        "boot-libs/base/tests/Numeric/num005.stdout-mips-sgi-irix",
        "boot-libs/base/tests/Numeric/num005.stdout-ws-64",
        "boot-libs/base/tests/Numeric/num005.stdout-x86_64-unknown-openbsd",
        "boot-libs/base/tests/Numeric/num006.hs",
        "boot-libs/base/tests/Numeric/num006.stdout",
        "boot-libs/base/tests/Numeric/num007.hs",
        "boot-libs/base/tests/Numeric/num007.stdout",
        "boot-libs/base/tests/Numeric/num008.hs",
        "boot-libs/base/tests/Numeric/num008.stdout",
        "boot-libs/base/tests/Numeric/num009.hs",
        "boot-libs/base/tests/Numeric/num009.stdout",
        "boot-libs/base/tests/Numeric/num009.stdout-i386-unknown-mingw32",
        "boot-libs/base/tests/Numeric/num010.hs",
        "boot-libs/base/tests/Numeric/num010.stdout",
        "boot-libs/base/tests/Numeric/sqrt.hs",
        "boot-libs/base/tests/Numeric/sqrt.stdout",
        "boot-libs/base/tests/performGC001.hs",
        "boot-libs/base/tests/qsem001.hs",
        "boot-libs/base/tests/qsem001.stdout",
        "boot-libs/base/tests/qsemn001.hs",
        "boot-libs/base/tests/qsemn001.stdout",
        "boot-libs/base/tests/quotOverflow.hs",
        "boot-libs/base/tests/quotOverflow.stdout",
        "boot-libs/base/tests/rand001.hs",
        "boot-libs/base/tests/rand001.stdout",
        "boot-libs/base/tests/ratio001.hs",
        "boot-libs/base/tests/ratio001.stdout",
        "boot-libs/base/tests/readDouble001.hs",
        "boot-libs/base/tests/readDouble001.stdout",
        "boot-libs/base/tests/readFixed001.hs",
        "boot-libs/base/tests/readFixed001.stdout",
        "boot-libs/base/tests/readFloat.hs",
        "boot-libs/base/tests/readFloat.stderr",
        "boot-libs/base/tests/readInteger001.hs",
        "boot-libs/base/tests/readInteger001.stdout",
        "boot-libs/base/tests/readLitChar.hs",
        "boot-libs/base/tests/readLitChar.stdout",
        "boot-libs/base/tests/reads001.hs",
        "boot-libs/base/tests/reads001.stdout",
        "boot-libs/base/tests/show001.hs",
        "boot-libs/base/tests/show001.stdout",
        "boot-libs/base/tests/showDouble.hs",
        "boot-libs/base/tests/showDouble.stdout",
        "boot-libs/base/tests/stableptr001.hs",
        "boot-libs/base/tests/stableptr001.stdout",
        "boot-libs/base/tests/stableptr003.hs",
        "boot-libs/base/tests/stableptr004.hs",
        "boot-libs/base/tests/stableptr004.stdout",
        "boot-libs/base/tests/stableptr005.hs",
        "boot-libs/base/tests/stableptr005.stdout",
        "boot-libs/base/tests/System/all.T",
        "boot-libs/base/tests/System/exitWith001.hs",
        "boot-libs/base/tests/System/getArgs001.hs",
        "boot-libs/base/tests/System/getArgs001.stdout",
        "boot-libs/base/tests/System/getEnv001.hs",
        "boot-libs/base/tests/System/getEnv001.stdout",
        "boot-libs/base/tests/System/Makefile",
        "boot-libs/base/tests/System/system001.hs",
        "boot-libs/base/tests/System/system001.stdout",
        "boot-libs/base/tests/System/T5930.hs",
        "boot-libs/base/tests/System/T5930.stdout",
        "boot-libs/base/tests/System/Timeout001.hs",
        "boot-libs/base/tests/T10149.hs",
        "boot-libs/base/tests/T10149.stdout",
        "boot-libs/base/tests/T10412.hs",
        "boot-libs/base/tests/T10412.stdout",
        "boot-libs/base/tests/T11334a.hs",
        "boot-libs/base/tests/T11334a.stdout",
        "boot-libs/base/tests/T11555.hs",
        "boot-libs/base/tests/T11555.stdout",
        "boot-libs/base/tests/T11760.hs",
        "boot-libs/base/tests/T11760.stdout",
        "boot-libs/base/tests/T12494.hs",
        "boot-libs/base/tests/T12494.stdout",
        "boot-libs/base/tests/T12852.hs",
        "boot-libs/base/tests/T12852.stdout",
        "boot-libs/base/tests/T12874.hs",
        "boot-libs/base/tests/T12874.stdout",
        "boot-libs/base/tests/T13097.hs",
        "boot-libs/base/tests/T13097.stdout",
        "boot-libs/base/tests/T13167.hs",
        "boot-libs/base/tests/T13167.stdout",
        "boot-libs/base/tests/T13191.hs",
        "boot-libs/base/tests/T13191.stdout",
        "boot-libs/base/tests/T13525.hs",
        "boot-libs/base/tests/T13896.hs",
        "boot-libs/base/tests/T14425.hs",
        "boot-libs/base/tests/T14425.stdout",
        "boot-libs/base/tests/T15349.hs",
        "boot-libs/base/tests/T15349.stderr",
        "boot-libs/base/tests/T16111.hs",
        "boot-libs/base/tests/T16111.stderr",
        "boot-libs/base/tests/T16943a.hs",
        "boot-libs/base/tests/T16943a.stdout",
        "boot-libs/base/tests/T16943b.hs",
        "boot-libs/base/tests/T16943b.stdout",
        "boot-libs/base/tests/T2528.hs",
        "boot-libs/base/tests/T2528.stdout",
        "boot-libs/base/tests/T3474.hs",
        "boot-libs/base/tests/T3474.stdout",
        "boot-libs/base/tests/T4006.hs",
        "boot-libs/base/tests/T4006.stdout",
        "boot-libs/base/tests/T5943.hs",
        "boot-libs/base/tests/T5943.stdout",
        "boot-libs/base/tests/T5962.hs",
        "boot-libs/base/tests/T5962.stdout",
        "boot-libs/base/tests/T7034.hs",
        "boot-libs/base/tests/T7034.stdout",
        "boot-libs/base/tests/T7457.hs",
        "boot-libs/base/tests/T7457.stdout",
        "boot-libs/base/tests/T7653.hs",
        "boot-libs/base/tests/T7773.hs",
        "boot-libs/base/tests/T7773.stdout",
        "boot-libs/base/tests/T7787.hs",
        "boot-libs/base/tests/T7787.stdout",
        "boot-libs/base/tests/T8089.hs",
        "boot-libs/base/tests/T8684.hs",
        "boot-libs/base/tests/T8766.hs",
        "boot-libs/base/tests/T8766.stdout",
        "boot-libs/base/tests/T9111.hs",
        "boot-libs/base/tests/T9395.hs",
        "boot-libs/base/tests/T9395.stderr",
        "boot-libs/base/tests/T9532.hs",
        "boot-libs/base/tests/T9532.stdout",
        "boot-libs/base/tests/T9586.hs",
        "boot-libs/base/tests/T9681.hs",
        "boot-libs/base/tests/T9681.stderr",
        "boot-libs/base/tests/T9826.hs",
        "boot-libs/base/tests/T9826.stdout",
        "boot-libs/base/tests/T9848.hs",
        "boot-libs/base/tests/T9848.stdout",
        "boot-libs/base/tests/take001.hs",
        "boot-libs/base/tests/take001.stdout",
        "boot-libs/base/tests/tempfiles.hs",
        "boot-libs/base/tests/tempfiles.stdout",
        "boot-libs/base/tests/tempfiles.stdout-mingw32",
        "boot-libs/base/tests/Text.Printf/all.T",
        "boot-libs/base/tests/Text.Printf/Makefile",
        "boot-libs/base/tests/Text.Printf/T1548.hs",
        "boot-libs/base/tests/Text.Printf/T1548.stdout",
        "boot-libs/base/tests/text001.hs",
        "boot-libs/base/tests/text001.stdout",
        "boot-libs/base/tests/topHandler01.hs",
        "boot-libs/base/tests/topHandler01.stdout",
        "boot-libs/base/tests/topHandler02.hs",
        "boot-libs/base/tests/topHandler03.hs",
        "boot-libs/base/tests/topHandler04.hs",
        "boot-libs/base/tests/topHandler04.stderr",
        "boot-libs/base/tests/trace001.hs",
        "boot-libs/base/tests/trace001.stderr",
        "boot-libs/base/tests/trace001.stdout",
        "boot-libs/base/tests/tup001.hs",
        "boot-libs/base/tests/tup001.stdout",
        "boot-libs/base/tests/unicode001.hs",
        "boot-libs/base/tests/unicode001.stdout",
        "boot-libs/base/tests/unicode002.hs",
        "boot-libs/base/tests/unicode002.stdout",
        "boot-libs/base/tests/weak001.hs",
        "boot-libs/base/Text/ParserCombinators/ReadP.hs",
        "boot-libs/base/Text/ParserCombinators/ReadPrec.hs",
        "boot-libs/base/Text/Printf.hs",
        "boot-libs/base/Text/Read.hs",
        "boot-libs/base/Text/Read/Lex.hs",
        "boot-libs/base/Text/Show.hs",
        "boot-libs/base/Text/Show/Functions.hs",
        "boot-libs/base/Type/Reflection.hs",
        "boot-libs/base/Type/Reflection/Unsafe.hs",
        "boot-libs/base/Unsafe/Coerce.hs",
        "boot-libs/cabal.config",
        "boot-libs/ghc-boot-th/changelog.md",
        "boot-libs/ghc-boot-th/ghc-boot-th.cabal",
        "boot-libs/ghc-boot-th/ghc-boot-th.cabal.in",
        "boot-libs/ghc-boot-th/GHC/ForeignSrcLang/Type.hs",
        "boot-libs/ghc-boot-th/GHC/LanguageExtensions/Type.hs",
        "boot-libs/ghc-boot-th/GHC/Lexeme.hs",
        "boot-libs/ghc-boot-th/LICENSE",
        "boot-libs/ghc-boot/changelog.md",
        "boot-libs/ghc-boot/ghc-boot.cabal",
        "boot-libs/ghc-boot/ghc-boot.cabal.in",
        "boot-libs/ghc-boot/GHC/ForeignSrcLang.hs",
        "boot-libs/ghc-boot/GHC/HandleEncoding.hs",
        "boot-libs/ghc-boot/GHC/LanguageExtensions.hs",
        "boot-libs/ghc-boot/GHC/PackageDb.hs",
        "boot-libs/ghc-boot/GHC/Serialized.hs",
        "boot-libs/ghc-boot/LICENSE",
        "boot-libs/ghc-heap/cbits/HeapPrim.cmm",
        "boot-libs/ghc-heap/ghc-heap.cabal",
        "boot-libs/ghc-heap/ghc-heap.cabal.in",
        "boot-libs/ghc-heap/GHC/Exts/Heap.hs",
        "boot-libs/ghc-heap/GHC/Exts/Heap/Closures.hs",
        "boot-libs/ghc-heap/GHC/Exts/Heap/ClosureTypes.hs",
        "boot-libs/ghc-heap/GHC/Exts/Heap/Constants.hsc",
        "boot-libs/ghc-heap/GHC/Exts/Heap/InfoTable.hsc",
        "boot-libs/ghc-heap/GHC/Exts/Heap/InfoTable/Types.hsc",
        "boot-libs/ghc-heap/GHC/Exts/Heap/InfoTableProf.hsc",
        "boot-libs/ghc-heap/GHC/Exts/Heap/Utils.hsc",
        "boot-libs/ghc-heap/LICENSE",
        "boot-libs/ghc-heap/Setup.hs",
        "boot-libs/ghc-heap/tests/all.T",
        "boot-libs/ghc-heap/tests/heap_all.hs",
        "boot-libs/ghc-heap/tests/heap_all.stdout",
        "boot-libs/ghc-heap/tests/Makefile",
        "boot-libs/ghc-prim/cbits/atomic.c",
        "boot-libs/ghc-prim/cbits/bswap.c",
        "boot-libs/ghc-prim/cbits/clz.c",
        "boot-libs/ghc-prim/cbits/ctz.c",
        "boot-libs/ghc-prim/cbits/debug.c",
        "boot-libs/ghc-prim/cbits/longlong.c",
        "boot-libs/ghc-prim/cbits/pdep.c",
        "boot-libs/ghc-prim/cbits/pext.c",
        "boot-libs/ghc-prim/cbits/popcnt.c",
        "boot-libs/ghc-prim/cbits/word2float.c",
        "boot-libs/ghc-prim/changelog.md",
        "boot-libs/ghc-prim/ghc-prim.cabal",
        "boot-libs/ghc-prim/GHC/Classes.hs",
        "boot-libs/ghc-prim/GHC/CString.hs",
        "boot-libs/ghc-prim/GHC/Debug.hs",
        "boot-libs/ghc-prim/GHC/IntWord64.hs",
        "boot-libs/ghc-prim/GHC/Magic.hs",
        "boot-libs/ghc-prim/GHC/PrimopWrappers.hs",
        "boot-libs/ghc-prim/GHC/Tuple.hs",
        "boot-libs/ghc-prim/GHC/Types.hs",
        "boot-libs/ghc-prim/LICENSE",
        "boot-libs/ghc-prim/Setup.hs",
        "boot-libs/ghc-prim/tests/T6026.hs",
        "boot-libs/ghc-prim/tests/T6026.stdout",
        "boot-libs/ghci/Asterius/GHCi.hs",
        "boot-libs/ghci/changelog.md",
        "boot-libs/ghci/ghci.cabal",
        "boot-libs/ghci/ghci.cabal.in",
        "boot-libs/ghci/GHCi/BinaryArray.hs",
        "boot-libs/ghci/GHCi/BreakArray.hs",
        "boot-libs/ghci/GHCi/CreateBCO.hs",
        "boot-libs/ghci/GHCi/FFI.hsc",
        "boot-libs/ghci/GHCi/InfoTable.hsc",
        "boot-libs/ghci/GHCi/Message.hs",
        "boot-libs/ghci/GHCi/ObjLink.hs",
        "boot-libs/ghci/GHCi/RemoteTypes.hs",
        "boot-libs/ghci/GHCi/ResolvedBCO.hs",
        "boot-libs/ghci/GHCi/Run.hs",
        "boot-libs/ghci/GHCi/Signals.hs",
        "boot-libs/ghci/GHCi/StaticPtrTable.hs",
        "boot-libs/ghci/GHCi/TH.hs",
        "boot-libs/ghci/GHCi/TH/Binary.hs",
        "boot-libs/ghci/LICENSE",
        "boot-libs/ghci/SizedSeq.hs",
        "boot-libs/integer-simple/changelog.md",
        "boot-libs/integer-simple/GHC/Integer.hs",
        "boot-libs/integer-simple/GHC/Integer/Logarithms.hs",
        "boot-libs/integer-simple/GHC/Integer/Logarithms/Internals.hs",
        "boot-libs/integer-simple/GHC/Integer/Simple/Internals.hs",
        "boot-libs/integer-simple/GHC/Integer/Type.hs",
        "boot-libs/integer-simple/integer-simple.cabal",
        "boot-libs/integer-simple/LICENSE",
        "boot-libs/integer-simple/Setup.hs",
        "boot-libs/rts/Apply.cmm",
        "boot-libs/rts/AutoApply.cmm",
        "boot-libs/rts/AutoApply.h",
        "boot-libs/rts/BeginPrivate.h",
        "boot-libs/rts/Compact.cmm",
        "boot-libs/rts/EndPrivate.h",
        "boot-libs/rts/Exception.cmm",
        "boot-libs/rts/HeapStackCheck.cmm",
        "boot-libs/rts/PrimOps.cmm",
        "boot-libs/rts/RaiseAsync.h",
        "boot-libs/rts/rts.conf",
        "boot-libs/rts/sm/ShouldCompact.h",
        "boot-libs/rts/SMPClosureOps.h",
        "boot-libs/rts/StgMiscClosures.cmm",
        "boot-libs/rts/StgStartup.cmm",
        "boot-libs/rts/StgStdThunks.cmm",
        "boot-libs/rts/Updates.cmm",
        "boot-libs/rts/Updates.h",
        "boot-libs/template-haskell/changelog.md",
        "boot-libs/template-haskell/Language/Haskell/TH.hs",
        "boot-libs/template-haskell/Language/Haskell/TH/LanguageExtensions.hs",
        "boot-libs/template-haskell/Language/Haskell/TH/Lib.hs",
        "boot-libs/template-haskell/Language/Haskell/TH/Lib/Internal.hs",
        "boot-libs/template-haskell/Language/Haskell/TH/Lib/Map.hs",
        "boot-libs/template-haskell/Language/Haskell/TH/Ppr.hs",
        "boot-libs/template-haskell/Language/Haskell/TH/PprLib.hs",
        "boot-libs/template-haskell/Language/Haskell/TH/Quote.hs",
        "boot-libs/template-haskell/Language/Haskell/TH/Syntax.hs",
        "boot-libs/template-haskell/LICENSE",
        "boot-libs/template-haskell/prologue.txt",
        "boot-libs/template-haskell/Setup.hs",
        "boot-libs/template-haskell/template-haskell.cabal",
        "boot-libs/template-haskell/tests/all.T",
        "boot-libs/template-haskell/tests/dataToExpQUnit.hs",
        "boot-libs/template-haskell/tests/dataToExpQUnit.stderr",
        "boot-libs/template-haskell/tests/Makefile",
        "ghc-libdir/include/Cmm.h",
        "ghc-libdir/include/DerivedConstants.h",
        "ghc-libdir/include/ffi.h",
        "ghc-libdir/include/ffitarget.h",
        "ghc-libdir/include/ghcautoconf.h",
        "ghc-libdir/include/ghcconfig.h",
        "ghc-libdir/include/ghcplatform.h",
        "ghc-libdir/include/ghcversion.h",
        "ghc-libdir/include/HsFFI.h",
        "ghc-libdir/include/MachDeps.h",
        "ghc-libdir/include/Rts.h",
        "ghc-libdir/include/rts/Adjustor.h",
        "ghc-libdir/include/rts/BlockSignals.h",
        "ghc-libdir/include/rts/Bytecodes.h",
        "ghc-libdir/include/rts/Config.h",
        "ghc-libdir/include/rts/Constants.h",
        "ghc-libdir/include/rts/EventLogFormat.h",
        "ghc-libdir/include/rts/EventLogWriter.h",
        "ghc-libdir/include/rts/FileLock.h",
        "ghc-libdir/include/rts/Flags.h",
        "ghc-libdir/include/rts/GetTime.h",
        "ghc-libdir/include/rts/Globals.h",
        "ghc-libdir/include/rts/Hpc.h",
        "ghc-libdir/include/rts/IOManager.h",
        "ghc-libdir/include/rts/Libdw.h",
        "ghc-libdir/include/rts/LibdwPool.h",
        "ghc-libdir/include/rts/Linker.h",
        "ghc-libdir/include/rts/Main.h",
        "ghc-libdir/include/rts/Messages.h",
        "ghc-libdir/include/rts/OSThreads.h",
        "ghc-libdir/include/rts/Parallel.h",
        "ghc-libdir/include/rts/PrimFloat.h",
        "ghc-libdir/include/rts/prof/CCS.h",
        "ghc-libdir/include/rts/prof/LDV.h",
        "ghc-libdir/include/rts/Profiling.h",
        "ghc-libdir/include/rts/Signals.h",
        "ghc-libdir/include/rts/SpinLock.h",
        "ghc-libdir/include/rts/StableName.h",
        "ghc-libdir/include/rts/StablePtr.h",
        "ghc-libdir/include/rts/StaticPtrTable.h",
        "ghc-libdir/include/rts/storage/Block.h",
        "ghc-libdir/include/rts/storage/ClosureMacros.h",
        "ghc-libdir/include/rts/storage/Closures.h",
        "ghc-libdir/include/rts/storage/ClosureTypes.h",
        "ghc-libdir/include/rts/storage/FunTypes.h",
        "ghc-libdir/include/rts/storage/GC.h",
        "ghc-libdir/include/rts/storage/Heap.h",
        "ghc-libdir/include/rts/storage/InfoTables.h",
        "ghc-libdir/include/rts/storage/MBlock.h",
        "ghc-libdir/include/rts/storage/TSO.h",
        "ghc-libdir/include/rts/Threads.h",
        "ghc-libdir/include/rts/Ticky.h",
        "ghc-libdir/include/rts/Time.h",
        "ghc-libdir/include/rts/Timer.h",
        "ghc-libdir/include/rts/TTY.h",
        "ghc-libdir/include/rts/Types.h",
        "ghc-libdir/include/rts/Utils.h",
        "ghc-libdir/include/RtsAPI.h",
        "ghc-libdir/include/Stg.h",
        "ghc-libdir/include/stg/DLL.h",
        "ghc-libdir/include/stg/HaskellMachRegs.h",
        "ghc-libdir/include/stg/MachRegs.h",
        "ghc-libdir/include/stg/MiscClosures.h",
        "ghc-libdir/include/stg/Prim.h",
        "ghc-libdir/include/stg/Regs.h",
        "ghc-libdir/include/stg/RtsMachRegs.h",
        "ghc-libdir/include/stg/SMP.h",
        "ghc-libdir/include/stg/Ticky.h",
        "ghc-libdir/include/stg/Types.h",
        "ghc-libdir/llvm-passes",
        "ghc-libdir/llvm-targets",
        "ghc-libdir/platformConstants",
        "ghc-libdir/settings",
        "ghc-libdir/template-hsc.h",
        ],
    visibility = ["//bazel/bazel_build:__pkg__"],
    )
